--- a/package.json
+++ b/package.json
@@ -26,18 +26,22 @@
     },
     "dependencies": {
         "phaser": "3.80.1",
+        "phaser3-rex-plugins": "^1.80.6",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
-        "phaser3-rex-plugins": "^1.80.6"
+        "react-router-dom": "^6.26.0"
     },
     "devDependencies": {
         "@types/react": "^18.3.3",
         "@types/react-dom": "^18.3.0",
         "@vitejs/plugin-react": "^4.3.1",
+        "autoprefixer": "^10.4.19",
         "eslint": "^8.57.0",
         "eslint-plugin-react": "^7.34.2",
         "eslint-plugin-react-hooks": "^4.6.2",
         "eslint-plugin-react-refresh": "^0.4.7",
+        "postcss": "^8.4.40",
+        "tailwindcss": "^3.4.7",
         "terser": "^5.28.1",
         "vite": "^5.3.1"
     }
