--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "build": "vite build --config vite/config.prod.mjs"
     },
     "dependencies": {
+        "@tonconnect/ui-react": "^2.0.6",
         "phaser": "3.80.1",
         "phaser3-rex-plugins": "^1.80.6",
         "react": "^18.3.1",
@@ -46,4 +47,3 @@
         "vite": "^5.3.1"
     }
 }
-
