--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,11 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.19.2",
-    "firebase": "^10.12.5"
+    "firebase": "^10.12.5",
+    "@ton/core": "^0.56.3",
+    "@ton/crypto": "^3.3.0",
+    "@ton/ton": "14.0.0",
+    "buffer": "^6.0.3",
+    "dotenv": "^16.4.5"
   }
 }
