--- a/backend/package.json
+++ b/backend/package.json
@@ -6,18 +6,22 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.19.2",
-    "firebase": "^10.12.5",
     "@ton/core": "^0.56.3",
     "@ton/crypto": "^3.3.0",
     "@ton/ton": "14.0.0",
     "buffer": "^6.0.3",
-    "dotenv": "^16.4.5"
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "firebase": "^10.12.5"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.4"
   }
 }
