--- a/backend/package.json
+++ b/backend/package.json
@@ -1,13 +1,12 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "type": "module",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "node index.ts",
+    "dev": "nodemon index.ts"
   },
   "author": "",
   "license": "ISC",
@@ -15,13 +14,17 @@
     "@ton/core": "^0.56.3",
     "@ton/crypto": "^3.3.0",
     "@ton/ton": "14.0.0",
+    "@types/express": "^4.17.21",
+    "@types/node": "^22.4.1",
     "buffer": "^6.0.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "firebase": "^10.12.5"
+    "firebase": "^10.12.5",
+    "typescript": "^5.5.4"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "nodemon": "^3.1.4"
   }
 }
