--- a/backend/package.json
+++ b/backend/package.json
@@ -16,15 +16,19 @@
     "@ton/ton": "14.0.0",
     "@types/express": "^4.17.21",
     "@types/node": "^22.4.1",
+    "@types/swagger-jsdoc": "^6.0.4",
     "buffer": "^6.0.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "firebase": "^10.12.5",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "typescript": "^5.5.4"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
+    "@types/swagger-ui-express": "^4.1.6",
     "nodemon": "^3.1.4"
   }
 }
