--- a/web/package.json
+++ b/web/package.json
@@ -26,6 +26,7 @@
     },
     "dependencies": {
         "@tonconnect/ui-react": "^2.0.6",
+        "axios": "^1.7.4",
         "phaser": "3.80.1",
         "phaser3-rex-plugins": "^1.80.6",
         "react": "^18.3.1",
