--- a/web/package.json
+++ b/web/package.json
@@ -1,50 +1,52 @@
 {
-    "name": "template-react",
-    "description": "A Phaser 3 project template that demonstrates React communication and uses Vite for bundling.",
-    "version": "1.1.0",
-    "type": "module",
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/phaserjs/template-react.git"
-    },
-    "author": "Phaser Studio <support@phaser.io> (https://phaser.io/)",
-    "license": "MIT",
-    "licenseUrl": "http://www.opensource.org/licenses/mit-license.php",
-    "bugs": {
-        "url": "https://github.com/phaserjs/template-react/issues"
-    },
-    "homepage": "https://github.com/phaserjs/template-react#readme",
-    "keywords": [
-        "phaser",
-        "phaser3",
-        "react",
-        "vite"
-    ],
-    "scripts": {
-        "dev": "vite --config vite/config.dev.mjs",
-        "build": "vite build --config vite/config.prod.mjs"
-    },
-    "dependencies": {
-        "@tonconnect/ui-react": "^2.0.6",
-        "axios": "^1.7.4",
-        "phaser": "3.80.1",
-        "phaser3-rex-plugins": "^1.80.6",
-        "react": "^18.3.1",
-        "react-dom": "^18.3.1",
-        "react-router-dom": "^6.26.0"
-    },
-    "devDependencies": {
-        "@types/react": "^18.3.3",
-        "@types/react-dom": "^18.3.0",
-        "@vitejs/plugin-react": "^4.3.1",
-        "autoprefixer": "^10.4.19",
-        "eslint": "^8.57.0",
-        "eslint-plugin-react": "^7.34.2",
-        "eslint-plugin-react-hooks": "^4.6.2",
-        "eslint-plugin-react-refresh": "^0.4.7",
-        "postcss": "^8.4.40",
-        "tailwindcss": "^3.4.7",
-        "terser": "^5.28.1",
-        "vite": "^5.3.1"
-    }
+  "name": "template-react",
+  "description": "A Phaser 3 project template that demonstrates React communication and uses Vite for bundling.",
+  "version": "1.1.0",
+  "type": "module",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/phaserjs/template-react.git"
+  },
+  "author": "Phaser Studio <support@phaser.io> (https://phaser.io/)",
+  "license": "MIT",
+  "licenseUrl": "http://www.opensource.org/licenses/mit-license.php",
+  "bugs": {
+    "url": "https://github.com/phaserjs/template-react/issues"
+  },
+  "homepage": "https://github.com/phaserjs/template-react#readme",
+  "keywords": [
+    "phaser",
+    "phaser3",
+    "react",
+    "vite"
+  ],
+  "scripts": {
+    "dev": "vite --config vite/config.dev.mjs",
+    "build": "vite build --config vite/config.prod.mjs"
+  },
+  "dependencies": {
+    "@tonconnect/ui-react": "^2.0.6",
+    "axios": "^1.7.4",
+    "phaser": "3.80.1",
+    "phaser3-rex-plugins": "^1.80.6",
+    "react": "^18.3.1",
+    "react-copy-to-clipboard": "^5.1.0",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.0",
+    "zustand": "^4.5.5"
+  },
+  "devDependencies": {
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react": "^4.3.1",
+    "autoprefixer": "^10.4.19",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react": "^7.34.2",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-react-refresh": "^0.4.7",
+    "postcss": "^8.4.40",
+    "tailwindcss": "^3.4.7",
+    "terser": "^5.28.1",
+    "vite": "^5.3.1"
+  }
 }
