--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "firebase": "^10.12.5",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5.5.4"
   },
   "devDependencies": {
