--- a/backend/package.json
+++ b/backend/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
-    "start": "node index.js",
-    "dev": "nodemon index.ts"
+    "start": "node dist/index.js",
+    "dev": "nodemon api/index.ts"
   },
   "author": "",
   "license": "ISC",
