--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,4 +1,14 @@
 {
   "version": 2,
+  "builds": [
+    {
+      "src": "api/index.ts",
+      "use": "@vercel/node",
+      "config": {
+        "output": "dist"
+      }
+    }
+  ],
+
   "rewrites": [{ "source": "/(.*)", "destination": "/api/index.ts" }]
 }
